# NaimixHakaton

./: .gitignore  Makefile  pyproject.toml
client/: цлчлилчфп шщчхсъ.txt
core/api/: urls.py
core/project/: container.py  urls.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
models/: model.pth
notebooks/: data_preproces.ipynb  model_training.ipynb
